--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           <li class="nav-item"><a href="" class="link contact-list">Contacts</a></li>
         </ul>
       </nav>
-      <!-- <address class="address"> -->
+      <address class="address">
       <ul class="contact list">
         <li class="contact-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
         <li class="contact-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
       </ul>
-    <!-- </address> -->
+    </address>
   </div>
     </header>
     <main class="main">
