--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
               width="264"
               height="260"
             />
+            <div class="job-title">
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img
@@ -102,8 +104,10 @@
               width="264"
               height="260"
             />
+            <div class="job-title">
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img
@@ -112,8 +116,10 @@
               width="264"
               height="260"
             />
+            <div class="job-title">
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img
@@ -122,8 +128,10 @@
               width="264"
               height="260"
             />
+            <div class="job-title">
             <h3 class="title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
+          </div>
           </li>
         </ul>
       </div>
