--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               height="260"
             />
             <div class="job-title">
-            <h3 class="title">Mark Guerrero</h3>
+            <h3 class="title persona-title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </div>
           </li>
@@ -105,7 +105,7 @@
               height="260"
             />
             <div class="job-title">
-            <h3 class="title">Tom Ford</h3>
+            <h3 class="title persona-title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </div>
           </li>
@@ -117,7 +117,7 @@
               height="260"
             />
             <div class="job-title">
-            <h3 class="title">Camila Garcia</h3>
+            <h3 class="title persona-title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </div>
           </li>
@@ -129,7 +129,7 @@
               height="260"
             />
             <div class="job-title">
-            <h3 class="title">Daniel Wilson</h3>
+            <h3 class="title persona-title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </div>
           </li>
