--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </ul>
       </nav>
       <address class="address">
-      <ul class="contact list">
-        <li class="contact-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
-        <li class="contact-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
+      <ul class="contact list ">
+        <li class="nav-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
+        <li class="nav-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </div>
@@ -36,7 +36,7 @@
       <section class="hero">
         <div class="container">
         <!-- <img src="./images/bg-sq.jpg" alt="bg" width="1600" height="600"> -->
-        <h1 class="hero-title">Effective Solutions for Your Buisness</h1>
+        <h1 class="hero-title">Effective Solutions<br> for Your Buisness</h1>
         <button type="button" class="hero-batton">Order Service</button>
       </div>
       </section>
