--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <section class="hero">
         <div class="container">
         <!-- <img src="./images/bg-sq.jpg" alt="bg" width="1600" height="600"> -->
-        <h1 class="hero-title">Effective Solutions<br> for Your Buisness</h1>
+        <h1 class="hero-title">Effective Solutions for Your Buisness</h1>
         <button type="button" class="hero-batton">Order Service</button>
       </div>
       </section>
