--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <footer class="footer"> 
       <div class="container">
      <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
-     <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing  growth solutions.</p>
+     <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
      </div>
     </footer>
   </body>
