--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,23 @@
         <div class="container page-header-container">
         <nav class="page-nav">
         <a href="./index.html" class="logo link">Web<span class="top-logo link">Studio</span></a>
-          <ul class="list link site-nav">
-            <li class="item-menu"><a href="./index.html" class="link-list link">Studio</a></li>
-            <li class="item-menu"><a href="./portfolio.html" class="link-list link">Portfolio </a></li>
-            <li class="item-menu"><a href="" class="link-list link">Contacts </a></li>
+          <ul class="list link menu-list">
+            <li class="nav-item"><a href="./index.html" class="link-list link">Studio</a></li>
+            <li class="nav-item"><a href="./portfolio.html" class="link-list link">Portfolio </a></li>
+            <li class="nav-item"><a href="" class="link-list link">Contacts </a></li>
           </ul>
         </nav>
-        <address>
+        <address class="address">
         <ul class="contact list">
-          <li class="contact-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
-          <li class="contact-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
+          <li class="nav-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
+          <li class="nav-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
         </ul>
     </address>
     </div>
       </header>
       <!-- HERO -->
       <main>
-        <section>
+        <section class="section-button">
             <div class="container">
             <h1 hidden>Hidden title</h1>
     <ul class="button-list list">
