--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,7 @@
     <ul class="list-photo">
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div>
             <img src="./images/app.jpg" alt="app" width="360" height="300">
              <h2 class="title">
                 Banking App Interface Concept
