--- a/portfolio.html
+++ b/portfolio.html
@@ -59,94 +59,111 @@
     <ul class="list-photo">
         <li class="promo-list-item">
             <a href="./index.html" class="link">
-                <div>
+                <div class="app-name">
             <img src="./images/app.jpg" alt="app" width="360" height="300">
              <h2 class="title">
                 Banking App Interface Concept
             </h2>
             <p class="text">
                 App
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/paybyphone.jpg" alt="paymant" width="360" height="300">
             <h2 class="title">
                 Cashless Payment
             </h2>
             <p class="text">
                 Marketing
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/computer-phone.jpg" alt="computerandphone" width="360" height="300">
             <h2 class="title">
                 Meditation App
             </h2>
             <p class="text">
                 App
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/godrive.jpg" alt="driver" width="360" height="300">
              <h2 class="title">
                 Taxi Service
             </h2>
             <p class="text">
                 Marketing
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/pictuteonphone.jpg" alt="picture" width="360" height="300">
             <h2 class="title">
                 Screen Illustrations
             </h2>
             <p class="text">
                 Design
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/happygirl.jpg" alt="girl" width="360" height="300">
             <h2 class="title">
                 Online Courses
             </h2>
             <p class="text">
                 Marketing
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/app-phone.jpg" alt="design" width="360" height="300">
             <h2 class="title">
                 Instagram Stories Concept
             </h2>
             <p class="text">
                 Design
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/pocket-frui.jpg" alt="fruit" width="360" height="300">
             <h2 class="title">
                 Organic Food
             </h2>
             <p class="text">
                 Web Site
-            </p></a>
+            </p></div>
+        </a>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
+                <div class="app-name">
             <img src="./images/capoflatte.jpg" alt="latte" width="360" height="300">
             <h2 class="title">
                 Fresh Coffee
             </h2>
             <p class="text">
                 Web Site
-            </p></a>
+            </p></div>
+        </a>
         </li>
     </ul>
     </div>
