--- a/portfolio.html
+++ b/portfolio.html
@@ -58,16 +58,18 @@
 <!-- SECTIOT PHOTO -->
     <ul class="list-photo">
         <li class="promo-list-item">
+            <div class="app-name">
             <a href="./index.html" class="link">
-                <div class="app-name">
+                
             <img src="./images/app.jpg" alt="app" width="360" height="300">
              <h2 class="title">
                 Banking App Interface Concept
             </h2>
             <p class="text">
                 App
-            </p></div>
+            </p>
         </a>
+    </div>
         </li>
         <li class="promo-list-item">
             <a href="./index.html" class="link">
