--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
              <h2 class="title">
                 Banking App Interface Concept
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 App
             </p>
         </div>
@@ -77,7 +77,7 @@
             <h2 class="title">
                 Cashless Payment
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Marketing
             </p></div>
         </a>
@@ -89,7 +89,7 @@
             <h2 class="title">
                 Meditation App
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 App
             </p></div>
         </a>
@@ -101,7 +101,7 @@
             <h2 class="title">
                 Taxi Service
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Marketing
             </p></div>
         </a>
@@ -113,7 +113,7 @@
             <h2 class="title">
                 Screen Illustrations
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Design
             </p></div>
         </a>
@@ -125,7 +125,7 @@
             <h2 class="title">
                 Online Courses
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Marketing
             </p></div>
         </a>
@@ -137,7 +137,7 @@
             <h2 class="title">
                 Instagram Stories Concept
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Design
             </p></div>
         </a>
@@ -149,7 +149,7 @@
             <h2 class="title">
                 Organic Food
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Web Site
             </p></div>
         </a>
@@ -161,7 +161,7 @@
             <h2 class="title">
                 Fresh Coffee
             </h2>
-            <p class="text">
+            <p class="text discribe">
                 Web Site
             </p></div>
         </a>
@@ -171,10 +171,10 @@
 </section>
 </main>
 <footer class="footer">
-    <!-- <div class="container"> -->
-  <a href="./index.html" class="logo link">Web<span class="footer-logo link">Studio</span></a>
-   <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing  growth solutions.</p>
-<!-- </div> -->
+    <div class="container">
+  <a href="./index.html" class="logo link bottom-logo">Web<span class="footer-logo link">Studio</span></a>
+   <p class="text-footer">Increase the flow of customers and<br> sales for your business with digital<br> marketing  growth solutions.</p>
+</div>
 </footer>
 </body>
 </html>
