--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Header-->
     <header class="page-header">
       <div class="container page-header-container">
-      <nav class="page-nav list">
+      <nav class="page-nav">
       <a href="./index.html" class="logo link">Web<span class="top-logo link">Studio</span></a>
         <ul class="list menu-list">
           <li class="nav-item"><a href="./index.html" class="link contact-list">Studio</a></li>
@@ -84,7 +84,7 @@
       <section class="section-team section">
         <div class="container">
         <h2 class="promo-title">Ouer Team</h2>
-        <ul class="team-list list">
+        <ul class="team-list list ">
           <li class="team-list-item">
             <img
               src="./images/mark-guerrero.jpg"
