--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section promo">
+      <section class="promo">
         <div class="container">
         <h2 class="promo-title">What are we doing</h2>
         <ul class="promo-list list">
