--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <div class="container page-header-container">
       <nav class="page-nav">
       <a href="./index.html" class="logo link">Web<span class="top-logo link">Studio</span></a>
-        <ul class="list menu-list">
+        <ul class=" menu-list">
           <li class="nav-item"><a href="./index.html" class="link contact-list">Studio</a></li>
           <li class="nav-item"><a href="./portfolio.html" class="link contact-list">Portfolio</a></li>
           <li class="nav-item"><a href="" class="link contact-list">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-      <ul class="contact list ">
+      <ul class="contact">
         <li class="nav-item"><a  href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
         <li class="nav-item"><a  href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
       </ul>
